#1 update API to use new socio-econ data provided on 11/20/18
